Revert "datatab change data with segmentedctrl on same uiview"
This reverts commit 903de367b4666067a54397285509195d7521b503.

--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/HomeTab.storyboard
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/HomeTab.storyboard
@@ -238,6 +238,6 @@
         <image name="house" catalog="system" width="64" height="54"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Bhw-3N-0xD"/>
+        <segue reference="JMB-Id-4nY"/>
     </inferredMetricsTieBreakers>
 </document>
