--- a/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/DataTab.storyboard
+++ b/SWAI_UI_20200120/UI_presentation_1/UI_presentation_1/DataTab.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iHr-7R-N9j">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,59 +10,110 @@
         <!--View Controller-->
         <scene sceneID="VIW-pg-54N">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="qqr-dL-yrt" customClass="ViewController" customModule="SleepWithAI" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="qqr-dL-yrt" customClass="ViewController" customModule="UI_presentation_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="J41-zE-UbF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="BackGround_SleepingMode" translatesAutoresizingMaskIntoConstraints="NO" id="oeg-CS-2jY">
-                                <rect key="frame" x="-71" y="-229" width="835" height="1113"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="BackGround_SleepingMode" translatesAutoresizingMaskIntoConstraints="NO" id="sNh-BZ-8bY">
+                                <rect key="frame" x="-35" y="-93" width="835" height="1113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="m7X-os-D6V">
-                                <rect key="frame" x="20" y="68" width="339" height="31"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="9tx-JU-uLd"/>
-                                </constraints>
+                            <segmentedControl autoresizesSubviews="NO" contentMode="top" fixedFrame="YES" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UOj-Bd-g2G">
+                                <rect key="frame" x="34" y="113" width="346" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <segments>
                                     <segment title="Day"/>
                                     <segment title="Month"/>
                                 </segments>
-                                <color key="selectedSegmentTintColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="selectedSegmentTintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                 <connections>
-                                    <action selector="switchSegmentedCtrlViewAction:" destination="qqr-dL-yrt" eventType="valueChanged" id="oc4-7K-KJm"/>
+                                    <segue destination="rBf-zA-g8X" kind="popoverPresentation" popoverAnchorView="UOj-Bd-g2G" id="KYO-MW-bTC">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CLZ-mA-0en">
-                                <rect key="frame" x="0.0" y="141" width="375" height="526"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aWg-xS-CYh">
+                                <rect key="frame" x="0.0" y="248" width="414" height="565"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FirstCustomCell" rowHeight="277" id="Eic-yT-bST" customClass="FirstCustomCell" customModule="UI_presentation_1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="277"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Eic-yT-bST" id="g2D-wt-ki5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="277"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dKU-Z0-3tg" userLabel="DateChartImage">
+                                                    <rect key="frame" x="20" y="37" width="374" height="218"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DateLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YJn-Ae-bMq">
+                                                    <rect key="frame" x="20" y="5" width="374" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="DateChartImageView" destination="dKU-Z0-3tg" id="pyI-Rf-q42"/>
+                                            <outlet property="DateLabel" destination="YJn-Ae-bMq" id="3jE-Cd-jGn"/>
+                                            <segue destination="ybt-IG-iyx" kind="presentation" id="6LS-Hy-EjB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="qqr-dL-yrt" id="FEc-hm-jZW"/>
-                                    <outlet property="delegate" destination="qqr-dL-yrt" id="nB5-gA-pfn"/>
+                                    <outlet property="dataSource" destination="qqr-dL-yrt" id="Ufd-7D-tlw"/>
+                                    <outlet property="delegate" destination="qqr-dL-yrt" id="reo-eo-nOz"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="CLZ-mA-0en" firstAttribute="centerX" secondItem="J41-zE-UbF" secondAttribute="centerX" id="6aL-Ym-bok"/>
-                            <constraint firstItem="CLZ-mA-0en" firstAttribute="bottom" secondItem="wPu-lx-YNa" secondAttribute="bottom" id="E8s-TG-yRQ"/>
-                            <constraint firstItem="m7X-os-D6V" firstAttribute="leading" secondItem="wPu-lx-YNa" secondAttribute="leading" constant="20" id="VJ0-Xa-wbD"/>
-                            <constraint firstItem="m7X-os-D6V" firstAttribute="top" secondItem="wPu-lx-YNa" secondAttribute="top" constant="24" id="abw-wq-zaD"/>
-                            <constraint firstItem="CLZ-mA-0en" firstAttribute="top" secondItem="m7X-os-D6V" secondAttribute="bottom" constant="43" id="wy6-5y-D68"/>
-                            <constraint firstItem="m7X-os-D6V" firstAttribute="trailing" secondItem="J41-zE-UbF" secondAttribute="trailingMargin" id="wzG-Sh-PpA"/>
-                            <constraint firstItem="CLZ-mA-0en" firstAttribute="leading" secondItem="wPu-lx-YNa" secondAttribute="leading" id="z3M-Cu-h52"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="wPu-lx-YNa"/>
                     </view>
                     <navigationItem key="navigationItem" id="WJD-yt-MAV"/>
                     <connections>
-                        <outlet property="tableView" destination="CLZ-mA-0en" id="vaM-77-N20"/>
+                        <outlet property="tableView" destination="aWg-xS-CYh" id="rMm-3W-r30"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2HM-TV-D0y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1541.5999999999999" y="1635.832083958021"/>
+            <point key="canvasLocation" x="1542.0289855072465" y="1635.9375"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pEi-Dr-p8b">
+            <objects>
+                <viewController id="rBf-zA-g8X" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gLu-Ap-Zhk">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="74q-2m-tZJ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WTq-kL-mus" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1539" y="2314"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="04b-hL-RAO">
+            <objects>
+                <viewController id="ybt-IG-iyx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L07-59-fve">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="xX4-tz-Rzl"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4da-j7-NY0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2343" y="1638"/>
         </scene>
         <!--Data-->
         <scene sceneID="taR-MI-ub8">
@@ -71,7 +122,7 @@
                     <tabBarItem key="tabBarItem" title="Data" image="chart.bar" catalog="system" id="vFb-gX-ZYB"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wOz-49-a3w">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
